# brain-training

./: .gitignore  CONTRIBUTING.md  PROGRAM.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: validate-submissions.yml
arena/: README.md  vote.schema.json
challenges/probabilistic-reasoning/: CHALLENGE.md
challenges/verbal-fluency/: CHALLENGE.md
challenges/working-memory/: CHALLENGE.md
games/spell-stack/: README.md  index.html
skills/brain-training-game-designer/: SKILL.md
skills/game-evaluator/: SKILL.md
src/brain_training/: __init__.py
submissions/: README.md  example-working-memory-alt.json  example-working-memory.json  spell-stack.json  submission.schema.json
